# PPOFlipperOpus

./: .gitignore  GE_AUTO_V2_PROPOSAL.md  INTEGRATION_PROPOSAL.md  README.md  UV_GUIDE.md  check_data_range.py  check_db.py  collection_checkpoint.json  config.py  export_to_json.py  ge_env.py  ge_prices_export.json  ge_rest_client.py  ppo_agent.py  ppo_config.py  ppoflipperopus-firebase-adminsdk-fbsvc-25f1af05a0.json  ppoflipperopus-firebase-adminsdk-fbsvc-907a50dae7.json  ppoflipperopus-firebase-adminsdk-fbsvc-90c6b95464.json  pyproject.toml  repair_db.py  requirements.txt  shared_knowledge.py  simple_export.py  tax_log.py  test_checkpoint.json  test_shared_cache.py  volume_analysis.py
api/: __init__.py  ge_rest_client.py  real_time_ge_client.py
config/: __init__.py  firebase_config.py  firebase_config_v2.py  real_trading_config.json  real_trading_config.py  volume_blacklist.txt
dashboard/: .env.example  DASHBOARD_README.md  QUICK_REFERENCE.md  SETUP_SUMMARY.md  VISUAL_GUIDE.md  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  test_backend.py
dashboard-vue/: package-lock.json  package.json  start.sh
dashboard/backend/: pyproject.toml  requirements.txt  server.py
data/: JSON_STORAGE_README.md  __init__.py  backfill_5m.py  backfill_5m_parallel.py  collect_all.py  collect_all_json.py  data_collector.py  export_training_cache.py  export_training_data.py  json_data_store.py  mongo_data_store.py  test_mongo_connection.py
docs/: DATA_COLLECTION_PROPOSAL.md  FINAL_NEXT_STEPS.md  FIREBASE_INFERENCE_ARCHITECTURE.md  NEXT_STEPS.md  (+10 more)
(+111 files in other folders)
