[project]
name = "ppo-flipper-opus"
version = "0.1.0"
description = "A PPO reinforcement learning bot for flipping items on the Old School RuneScape Grand Exchange"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "psutil>=7.2.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0.0",
]
export = [
    "pyarrow>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "data", "training", "inference", "tests", "config"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
